--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="gray_400">#BDBDBD</color>
 
 
+    <color name="deep_gray">#FF5a5a5a</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
