--- a/app/src/main/res/layout/recycler_date.xml
+++ b/app/src/main/res/layout/recycler_date.xml
@@ -73,19 +73,19 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/tv_meridiem"
                 app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
-                app:layout_constraintWidth_percent="0.25" />
+                app:layout_constraintWidth_percent="0.15" />
 
             <TextView
                 android:id="@+id/tv_date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="end"
+                android:gravity="center"
                 android:text="@{date}"
                 app:layout_constraintBaseline_toBaselineOf="@id/tv_time"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/tv_time"
                 app:layout_constraintTop_toBottomOf="@id/tv_alarm_title"
-                app:layout_constraintWidth_percent="0.45" />
+                app:layout_constraintWidth_percent="0.55" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch_alarm_state"
