--- a/app/src/main/res/layout/dialog_alarm.xml
+++ b/app/src/main/res/layout/dialog_alarm.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="alarmViewModel"
             type="kr.ryan.weatheralarm.viewModel.AlarmViewModel" />
@@ -18,103 +19,106 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TimePicker
-            android:id="@+id/time_pick"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:timePickerMode="spinner"
-            android:hour="@={editViewModel.selectedHour}"
-            android:minute="@={editViewModel.selectedMinute}"
-            app:layout_constraintHeight_percent="0.35"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/btn_cancel"
-            app:layout_constraintHeight_percent="0.55">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <TimePicker
+                android:id="@+id/time_pick"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="0dp"
+                android:hour="@={editViewModel.selectedHour}"
+                android:minute="@={editViewModel.selectedMinute}"
+                android:timePickerMode="spinner"
+                app:layout_constraintHeight_percent="0.35"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/tv_selected_date"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:background="@drawable/round_view"
-                    android:gravity="center_vertical"
-                    android:textStyle="bold"
-                    android:paddingStart="8dp"
-                    android:layout_marginBottom="5dp"
-                    app:layout_constraintWidth_percent="0.9"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:text="@{editViewModel.selectedDays.empty ? editViewModel.showDate : editViewModel.selectedDays}"
-                    app:layout_constraintHeight_percent="0.15"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_alarm"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/time_pick"
+                app:layout_constraintBottom_toTopOf="@id/btn_cancel"
+                app:layout_constraintHeight_percent="0.5">
 
-                <include
-                    android:id="@+id/include_day"
-                    layout="@layout/include_days"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    app:layout_constraintHeight_percent="0.15"
-                    app:layout_constraintTop_toBottomOf="@id/tv_selected_date" />
+                    android:layout_height="match_parent">
 
-                <EditText
-                    android:id="@+id/et_alarm_title"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:importantForAutofill="no"
-                    android:inputType="text"
-                    android:background="@drawable/round_view"
-                    android:hint="@string/title"
-                    android:paddingStart="8dp"
-                    android:layout_marginTop="5dp"
-                    android:text="@={editViewModel.alarmTitle}"
-                    app:layout_constraintWidth_percent="0.9"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHeight_percent="0.15"
-                    app:layout_constraintTop_toBottomOf="@id/include_day"
-                    tools:ignore="LabelFor" />
+                    <TextView
+                        android:id="@+id/tv_selected_date"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/round_view"
+                        android:gravity="center_vertical"
+                        android:paddingStart="8dp"
+                        android:text="@{editViewModel.selectedDays.empty ? editViewModel.showDate : editViewModel.selectedDays}"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHeight_percent="0.15"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintWidth_percent="0.9"
+                        tools:ignore="RtlSymmetry" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+                    <include
+                        android:id="@+id/include_day"
+                        layout="@layout/include_days"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        app:layout_constraintHeight_percent="0.15"
+                        app:layout_constraintTop_toBottomOf="@id/tv_selected_date" />
 
-        <Button
-            android:id="@+id/btn_cancel"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/cyan_200"
-            android:text="@string/cancel"
-            android:onClick="@{() -> alarmViewModel.onClickBtn(`CANCEL`)}"
-            app:backgroundTint="@null"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintWidth_percent="0.5" />
+                    <EditText
+                        android:id="@+id/et_alarm_title"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/round_view"
+                        android:hint="@string/title"
+                        android:importantForAutofill="no"
+                        android:inputType="text"
+                        android:paddingStart="8dp"
+                        android:text="@={editViewModel.alarmTitle}"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHeight_percent="0.15"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/include_day"
+                        app:layout_constraintWidth_percent="0.9"
+                        tools:ignore="LabelFor,RtlSymmetry" />
 
-        <Button
-            android:id="@+id/btn_save"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/cyan_200"
-            android:gravity="center"
-            android:text="@string/save"
-            android:onClick="@{() -> alarmViewModel.onClickBtn(`SAVE`)}"
-            app:backgroundTint="@null"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintWidth_percent="0.5" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
 
+            <Button
+                android:id="@+id/btn_cancel"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@color/cyan_200"
+                android:onClick="@{() -> alarmViewModel.onClickBtn(`CANCEL`)}"
+                android:text="@string/cancel"
+                app:backgroundTint="@null"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintHeight_percent="0.1"
+                app:layout_constraintWidth_percent="0.5" />
+
+            <Button
+                android:id="@+id/btn_save"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@color/cyan_200"
+                android:gravity="center"
+                android:onClick="@{() -> alarmViewModel.onClickBtn(`SAVE`)}"
+                android:text="@string/save"
+                app:backgroundTint="@null"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHeight_percent="0.1"
+                app:layout_constraintWidth_percent="0.5" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </layout>
