--- a/app/src/main/res/layout/dialog_alarm.xml
+++ b/app/src/main/res/layout/dialog_alarm.xml
@@ -43,22 +43,39 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/tv_selected_date"
+                    <LinearLayout
+                        android:id="@+id/date_linear_layout"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:layout_marginBottom="5dp"
-                        android:background="@drawable/round_view"
-                        android:gravity="center_vertical"
-                        android:paddingStart="8dp"
-                        android:text="@{editViewModel.selectedDays.empty ? editViewModel.showDate : editViewModel.selectedDays}"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHeight_percent="0.15"
-                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
+                        android:orientation="horizontal"
                         app:layout_constraintWidth_percent="0.9"
-                        tools:ignore="RtlSymmetry" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintHeight_percent="0.15">
+
+                        <TextView
+                            android:id="@+id/tv_selected_date"
+                            android:layout_width="0dp"
+                            android:layout_weight="8"
+                            android:layout_height="match_parent"
+                            android:layout_marginBottom="5dp"
+                            android:gravity="center_vertical"
+                            android:paddingStart="8dp"
+                            android:text="@{editViewModel.selectedDays.empty ? editViewModel.showDate : editViewModel.selectedDays}"
+                            android:textStyle="bold"
+                            tools:ignore="RtlSymmetry" />
+
+                        <ImageView
+                            android:id="@+id/iv_calendar"
+                            android:src="@drawable/calendar"
+                            android:scaleType="fitCenter"
+                            android:onClick="@{() -> alarmViewModel.onClickBtn(`CALENDAR`)}"
+                            android:layout_weight="2"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"/>
+
+                    </LinearLayout>
 
                     <include
                         android:id="@+id/include_day"
@@ -68,7 +85,7 @@
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
                         app:layout_constraintHeight_percent="0.15"
-                        app:layout_constraintTop_toBottomOf="@id/tv_selected_date" />
+                        app:layout_constraintTop_toBottomOf="@id/date_linear_layout" />
 
                     <EditText
                         android:id="@+id/et_alarm_title"
