--- a/app/src/main/res/layout/dialog_calendar.xml
+++ b/app/src/main/res/layout/dialog_calendar.xml
@@ -12,8 +12,8 @@
         android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <DatePicker
-            android:id="@+id/date_picker"
+        <CalendarView
+            android:id="@+id/calendar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.8"
