[add] 달력(요일) 선택화면 - dataBinding 이 동작하지않음을 확인, 이것저것 확인작업중 달력 날짜 가져올때 월이 -1 이 적용되어 있기떄문에 + 1 을 해줌
[todo]
날씨 정보 동기화 실패 시 동기화하라고 알림이나 버튼 추가

--- a/app/src/main/res/layout/dialog_calendar.xml
+++ b/app/src/main/res/layout/dialog_calendar.xml
@@ -30,7 +30,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintHeight_percent="0.2"
-            app:layout_constraintWidth_percent="0.5" />
+            app:layout_constraintWidth_percent="0.5"
+        />
 
         <Button
             android:id="@+id/btn_save"
@@ -38,7 +39,7 @@
             android:layout_height="0dp"
             android:background="@color/cyan_200"
             android:gravity="center"
-            android:onClick="@{() -> alarmViewModel.onClickBtn(`SAVE`)}"
+            android:onClick="@{() -> alarmViewModel.onClickBtn(`CANCEL`)}"
             android:text="@string/save"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
