[modify] 달력(요일) 선택화면 - 요일이 변경되지않음을 확인 -> 해결
[todo]
날씨 정보 동기화 실패 시 동기화하라고 알림이나 버튼 추가

--- a/app/src/main/res/layout/dialog_calendar.xml
+++ b/app/src/main/res/layout/dialog_calendar.xml
@@ -39,7 +39,7 @@
             android:layout_height="0dp"
             android:background="@color/cyan_200"
             android:gravity="center"
-            android:onClick="@{() -> alarmViewModel.onClickBtn(`CANCEL`)}"
+            android:onClick="@{() -> alarmViewModel.onClickBtn(`SAVE`)}"
             android:text="@string/save"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
