--- a/app/src/main/res/layout/include_days.xml
+++ b/app/src/main/res/layout/include_days.xml
@@ -15,7 +15,7 @@
 
         <TextView
             android:id="@+id/tv_sunday"
-            draw="@={viewModel.flowSelectedDays[0]}"
+            drawCirCle="@={viewModel.flowSelectedDays[0]}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
@@ -32,7 +32,7 @@
 
         <TextView
             android:id="@+id/tv_monday"
-            draw="@={viewModel.flowSelectedDays[1]}"
+            drawCirCle="@={viewModel.flowSelectedDays[1]}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
@@ -49,7 +49,7 @@
 
         <TextView
             android:id="@+id/tv_tuesday"
-            draw="@={viewModel.flowSelectedDays[2]}"
+            drawCirCle="@={viewModel.flowSelectedDays[2]}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
@@ -66,7 +66,7 @@
 
         <TextView
             android:id="@+id/tv_wednesday"
-            draw="@={viewModel.flowSelectedDays[3]}"
+            drawCirCle="@={viewModel.flowSelectedDays[3]}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
@@ -83,7 +83,7 @@
 
         <TextView
             android:id="@+id/tv_thursday"
-            draw="@={viewModel.flowSelectedDays[4]}"
+            drawCirCle="@={viewModel.flowSelectedDays[4]}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
@@ -100,7 +100,7 @@
 
         <TextView
             android:id="@+id/tv_friday"
-            draw="@={viewModel.flowSelectedDays[5]}"
+            drawCirCle="@={viewModel.flowSelectedDays[5]}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
@@ -117,7 +117,7 @@
 
         <TextView
             android:id="@+id/tv_saturday"
-            draw="@={viewModel.flowSelectedDays[6]}"
+            drawCirCle="@={viewModel.flowSelectedDays[6]}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
